--- a/src/content/posts/site-todo.mdx
+++ b/src/content/posts/site-todo.mdx
@@ -15,4 +15,12 @@ import openSansWoff2 from '@fontsource-variable/open-sans/files/open-sans-latin-
 <link rel="preload" as="font" type="font/woff2" href={openSansWoff2} crossorigin="anonymous" />
 
 ```
+
 - [ ] More fun facts
+- [ ] Dynamic fun facts?
+  
+Not sure if really feasible, but maybe extract them into a yml/json/text file for easy mobile editing?
+
+- [ ] Collage page with simple dynamic rendering of external images
+
+I’m imagining like a table full of Polaroids?   
