--- a/src/content/posts/my-beliefs.mdx
+++ b/src/content/posts/my-beliefs.mdx
@@ -1,6 +1,6 @@
 ---
 title: "My Beliefs"
-description: "They aren't objectively true, but I believe them."
+description: "They may not be objectively true, yet I believe them."
 pubDate: "Nov 30 2025"
 ---
 
