--- a/src/content/posts/site-todo.mdx
+++ b/src/content/posts/site-todo.mdx
@@ -24,3 +24,5 @@ Not sure if really feasible, but maybe extract them into a yml/json/text file fo
 - [ ] Collage page with simple dynamic rendering of external images
 
 I’m imagining like a table full of Polaroids?   
+
+- [ ] Pic of me n beans on Home Screen
