--- a/src/content/posts/my-beliefs.mdx
+++ b/src/content/posts/my-beliefs.mdx
@@ -21,3 +21,17 @@ You don't even know what it means.
 #### Paper is better
 
 And this is why I created [poof](https://poof.proteus.works).
+
+#### Tailwind is good
+
+The fact that people defend the esoteric idea of separating styles and markup always baffles me. Like yeah, you don’t want to send a massive dump of crap in 1998, and CSS is a nice enough way to extract out a design system yet keep things small. But come on its `$CURRENT_YEAR`. IMO DiasyUI is basically the logical conclusion of how far you can take a CSS design system, while being as ergonomic as possible. But it is what is: a hack. And if you want to extend every possible minor variation as it’s own semantic variant class defined in some god-forsaken stylesheet, please go for it. But I will be using utility classes bc it’s the closest thing we have to sanity in web styling.
+
+And yes you could make a number of small classes by yourself to augment these one-offs. But what do you get when you keep pushing down that road? A worse version of tailwind that you had to make yourself bc you’re too stubborn to just use it.
+
+If an analogue to the `style` attribute was created that was as performant and extensible as CSS, and there was a bombproof implementation of properly composable markup tags to replace what we could consider a “class”, I have no doubt it would be lauded as a great improvement. Like it or not, CSS-in-JS is popular for a reason, despite the fact that it is a MASSIVE hack and very complex.
+
+#### Emacs isn’t better than vim
+
+I am typing this in Emacs. I love Emacs. I live in Emacs. I’ve been hacking on Emacs for nearly 15 years. And still: vim is just as good. So is Zed. So is VSCode (ethics aside…). Sure it would probably be prudent to “learn your tool” or whatever, but if you’re a hotshot programmer pigeon typing in Notepad++ then do your thing. Use what you like, not everybody wants to paint the bike-shed.
+
+HOWEVER, if you have zero opinions on our trade — a favorite editor, library preferences, little tricks you swear by, functional or OOP, whatever — I probably won’t work with you.
