--- a/src/content/posts/site-todo.mdx
+++ b/src/content/posts/site-todo.mdx
@@ -26,4 +26,4 @@ Not sure if really feasible, but maybe extract them into a yml/json/text file fo
 I’m imagining like a table full of Polaroids?   
 
 - [ ] Pic of me n beans on Home Screen
-- [ ] Break out the “beliefs” sections into separate posts, reconstitute them into the beliefs post as a special type of post?
+- [ ] Break out the “beliefs” sections into separate posts with a “belief” tag, reconstitute them into the beliefs post as a special type of post?
