--- a/src/content/posts/site-todo.mdx
+++ b/src/content/posts/site-todo.mdx
@@ -27,3 +27,7 @@ I’m imagining like a table full of Polaroids?
 
 - [ ] Pic of me n beans on Home Screen
 - [ ] Break out the “beliefs” sections into separate posts with a “belief” tag, reconstitute them into the beliefs post as a special type of post?
+- [ ] Look into using [uniorg](https://github.com/rasendubi/uniorg) for live org-mode parsing
+  - Once this happens, I can probably just move away from MDX and rely entirely on server-side org mode parsing
+  - Publish a formal org-mode astro.js package?
+  - Would maybe be nice for TODO stuff as well (like this doc)
