--- a/src/content/posts/site-todo.mdx
+++ b/src/content/posts/site-todo.mdx
@@ -19,7 +19,7 @@ import openSansWoff2 from '@fontsource-variable/open-sans/files/open-sans-latin-
 - [ ] More fun facts
 - [ ] Dynamic fun facts?
   
-Not sure if really feasible, but maybe extract them into a yml/json/text file for easy mobile editing?
+extract them into a yml/json/text file for easy mobile editing?
 
 - [ ] Collage page with simple dynamic rendering of external images
 
