--- a/src/content/posts/my-beliefs.mdx
+++ b/src/content/posts/my-beliefs.mdx
@@ -1,7 +1,7 @@
 ---
 title: "My Beliefs"
 description: "They may not be objectively true, yet I believe them."
-pubDate: "Nov 30 2025"
+draftDate: "Nov 30 2025"
 ---
 
 #### Veganism is morally superior
