--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -6,6 +6,14 @@ pubDate: "Nov 29 2025"
 
 import Avatar from '../../components/RandomAvatar.astro';
 
+Blah blah blah blah
+
 <Avatar server:defer class="h-16 w-16">
-  <div slot="fallback" class="bg-base-100 h-16 w-16"></div>
+  <div slot="fallback" class="bg-background h-16 w-16"></div>
 </Avatar>
+
+Blahhhhhhhhhhhh blah blah blah
+
+<Avatar class="h-16 w-16" />
+
+Blah blah blah
