--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -17,3 +17,11 @@ Blahhhhhhhhhhhh blah blah blah
 <Avatar class="h-16 w-16" />
 
 Blah blah blah
+
+- [ ] One
+- [ ] Two
+- [ ] Three
+
+# Heading
+
+aldjfalksdjlkasd falksdjl 
