--- a/src/content/posts/my-beliefs.mdx
+++ b/src/content/posts/my-beliefs.mdx
@@ -4,7 +4,7 @@ description: "They may not be objectively true, yet I believe them."
 draftDate: "Nov 30 2025"
 ---
 
-#### Veganism is morally superior
+## Veganism is morally superior
 
 Let me start by saying that I am (regrettably) not vegan — I don't eat animal flesh, but on occasion I will consume other animal products. I do, however, BELIEVE in veganism, and am slowly working to eliminate all animal exploitation from my life. Yes, the dissonance hurts. Yes, the animals hurt worse.
 
@@ -14,15 +14,15 @@ Then, there was the “plant-based for health” era (less of an “era” and m
 
 Then I got cats.
 
-#### You don't actually like capitalism
+## You don't actually like capitalism
 
 You don't even know what it means.
 
-#### Paper is better
+## Paper is better
 
 And this is why I created [poof](https://poof.proteus.works).
 
-#### Tailwind is good
+## Tailwind is good
 
 The fact that people defend the esoteric idea of separating styles and markup always baffles me. Like yeah, you don’t want to send a massive dump of crap in 1998, and CSS is a nice enough way to extract out a design system yet keep things small. But come on its `$CURRENT_YEAR`. IMO DiasyUI is basically the logical conclusion of how far you can take a CSS design system, while being as ergonomic as possible. But it is what is: a hack. And if you want to extend every possible minor variation as it’s own semantic variant class defined in some god-forsaken stylesheet, please go for it. But I will be using utility classes bc it’s the closest thing we have to sanity in web styling.
 
@@ -30,7 +30,7 @@ And yes you could make a number of small classes by yourself to augment these on
 
 If an analogue to the `style` attribute was created that was as performant and extensible as CSS, and there was a bombproof implementation of properly composable markup tags to replace what we could consider a “class”, I have no doubt it would be lauded as a great improvement. Like it or not, CSS-in-JS is popular for a reason, despite the fact that it is a MASSIVE hack and very complex.
 
-#### Emacs isn’t better than vim
+## Emacs isn’t better than vim
 
 I am typing this in Emacs. I love Emacs. I live in Emacs. I’ve been hacking on Emacs for nearly 15 years. And still: vim is just as good. So is Zed. So is VSCode (ethics aside…). Sure it would probably be prudent to “learn your tool” or whatever, but if you’re a hotshot programmer pigeon typing in Notepad++ then do your thing. Use what you like, not everybody wants to paint the bike-shed.
 
