More list stuff

--- a/src/content/posts/post-1.mdx
+++ b/src/content/posts/post-1.mdx
@@ -21,7 +21,10 @@ end
   - Child
     - Grandchild
   - Child
+    - Grandchild
     - [ ] Grandchild
+    - Grandchild
+    - [x] Grandchild
 - Parent
   - Child
     - Grandchild
