More list stuff

--- a/src/content/posts/post-1.mdx
+++ b/src/content/posts/post-1.mdx
@@ -23,8 +23,8 @@ end
   - Child
     - Grandchild
     - [ ] Grandchild
-    - Grandchild
-    - [x] Grandchild
+    - Consequat est do voluptate reprehenderit. Adipisicing irure dolore ad minim officia culpa anim adipisicing ipsum consectetur non consectetur eu.
+    - [x] Excepteur pariatur in occaecat esse velit dolore mollit deserunt occaecat sunt. Sit consequat pariatur ad quis occaecat laboris consequat velit deserunt aliqua velit irure qui esse aliquip.
 - Parent
   - Child
     - Grandchild
