--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -5,7 +5,7 @@ pubDate: "Nov 29 2025"
 ---
 
 import Avatar from '@/components/RandomAvatar.astro';
-import StravaYtdMiles from "@/components/StravaYtdMiles.astro";
+import ServerValue from "@/components/ServerValue.astro";
 
 Blah blah blah blah
 
@@ -25,7 +25,7 @@ Blah blah blah
 
 ## Heading
 
-aldjfalksdjlkasd falksdjl
+Weeeeeeeeeeeee
 
 - [ ] Ride one million miles
-  - Miles ridden: <StravaYtdMiles server:defer><Fragment slot="fallback">checking Strava...</Fragment></StravaYtdMiles>
+  - Miles ridden: <ServerValue name="stravaYtdMiles" />
