--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -4,8 +4,8 @@ description: "Test"
 pubDate: "Nov 29 2025"
 ---
 
-import Avatar from '../../components/RandomAvatar.astro';
-import ServerValue from "../../components/ServerValue.astro";
+import Avatar from "@/components/RandomAvatar.astro";
+import ServerValue from "@/components/ServerValue.astro";
 
 Blah blah blah blah
 
