--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -6,7 +6,6 @@ pubDate: "Nov 29 2025"
 
 import Avatar from "@/components/RandomAvatar.astro";
 import ServerValue from "@/components/ServerValue.astro";
-import PoopValue from "@/components/PoopValue.astro";
 
 Blah blah blah blah
 
@@ -29,5 +28,4 @@ Blah blah blah
 Weeeeeeeeeeeee
 
 - [ ] Ride one million miles
-  - Miles ridden: <ServerValue name="stravaYtdMiles" />
-  - But fr fr: <PoopValue name="stravaYtdMiles" server:defer />
+  - But fr fr: <ServerValue server:defer name="stravaYtdMiles"><Fragment slot="fallback">Checking Strava...</Fragment></ServerValue>
