Handle server variables

--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -25,7 +25,9 @@ Blah blah blah
 
 ## Heading
 
-Weeeeeeeeeeeee
+Weeeeeeeeeeeee #(stravaYtdMiles):(Checking Strava...) yayyy #(test): asdfasdf
+
+Hmmmm #(poop):(Pooping...) asdfasdf
 
 - [ ] Ride one million miles
   - But fr fr: <ServerValue server:defer name="stravaYtdMiles"><Fragment slot="fallback">Checking Strava...</Fragment></ServerValue>
