--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -21,13 +21,15 @@ Blah blah blah
 
 - [ ] One
 - [ ] Two
-- [ ] Three
+- [ ] #(stravaYtdMiles):(Checking Strava...) miles
 
 ## Heading
-
-Weeeeeeeeeeeee #(stravaYtdMiles):(Checking Strava...) yayyy #(test): asdfasdf
 
 Hmmmm #(poop):(Pooping...) asdfasdf
 
 - [ ] Ride one million miles
   - But fr fr: <ServerValue server:defer name="stravaYtdMiles"><Fragment slot="fallback">Checking Strava...</Fragment></ServerValue>
+
+Backlinks (First Post)[[post-1]] weee
+
+Weeeeeeeeeee
