--- a/src/content/posts/ssr.mdx
+++ b/src/content/posts/ssr.mdx
@@ -21,14 +21,13 @@ Blah blah blah
 - [ ] One
 - [ ] Two
 - [ ] #(stravaYtdMiles):(Checking Strava...) miles
+- This should be red: #(poop):(Pooping...) weeee
 
-## Heading
+## Backlinks
 
-Hmmmm #(poop):(Pooping...) asdfasdf
-
-- [ ] Ride one million miles
-  - But fr fr: <ServerValue server:defer name="stravaYtdMiles"><Fragment slot="fallback">Checking Strava...</Fragment></ServerValue>
-
-Backlinks (First Post)[[post-1]] weee
+- [[post-1]]
+- (First Post)[[post-1]]
+- [[missing-post]]
+- (Missing Post)[[missing-post]]
 
 Weeeeeeeeeee
